[gd_scene load_steps=5 format=2]

[ext_resource path="res://Test/Test.gd" type="Script" id=1]
[ext_resource path="res://Test/RigidBody2D.gd" type="Script" id=2]
[ext_resource path="res://Assets/Art/Circle.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 15.0

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="RigidBody2D" type="RigidBody2D" parent="."]
input_pickable = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="RigidBody2D"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
[connection signal="mouse_entered" from="RigidBody2D" to="RigidBody2D" method="_on_RigidBody2D_mouse_entered"]
[connection signal="mouse_exited" from="RigidBody2D" to="RigidBody2D" method="_on_RigidBody2D_mouse_exited"]
